others/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-app-ingress
  namespace: network-app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: network-app-internal-svc
            port:
              number: 80
        path: /
        pathType: Prefix
