others/network-policy.yaml
# https://kubernetes.io/docs/concepts/services-networking/network-policies/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-app2-network-policy
  namespace: network-app2
spec:
  podSelector:
    matchLabels:
      app: network-app2
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: network-app
